--- a/style.css
+++ b/style.css
@@ -378,9 +378,49 @@
 	margin-right: 30px;
 }
 
-.slider__img {
+.slide__img {
 	width: 100%;
 }
+
+.slider-track {
+    position: relative;
+    width: calc(100% * 4);
+    top: 0;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    -webkit-transition: 1s;
+    -o-transition: 1s;
+    transition: 1s;
+    -webkit-transition-timing-function: ease-in-out;
+    -o-transition-timing-function: ease-in-out;
+    transition-timing-function: ease-in-out;
+}
+
+.slider__vieport {
+	width: 100%;
+    display: table;
+    position: relative;
+    overflow: hidden;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+
+.slider-track ul, .slider-track li {
+    margin: 0;
+    padding: 0;
+}
+
+.slider-track li {
+    width: calc(100%/4);
+    list-style: none;
+    display: inline;
+    float: left;
+}
+
 
 .slider__arrows {
 	display: flex;
