--- a/style.css
+++ b/style.css
@@ -333,7 +333,7 @@
 .catering__contain {
 	width: 100%;
 	margin: auto 0;
-	min-height: 550px;
+	max-height: 580px;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
