--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @import url("./fonts/fonts.css");
 
+html {
+	overflow-x: hidden;
+}
+
+
 .body {
 	background-color: #098BAB;
 	max-width: 1600px;
@@ -9,10 +14,14 @@
 	overflow-x: hidden;
 }
 
+/* Начало header */
+
 .header {
 	width: 100%;
 	min-height: 75px;
 	background-color: rgba(9, 139, 171, .8);
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	z-index: 10;
 	position: fixed;
@@ -22,10 +31,19 @@
 .header__body {
 	max-width: 1270px;
 	width: 100%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	margin: auto;
 }
 
@@ -33,11 +51,24 @@
 	max-width: 59px;
 }
 
+.header__burger {
+	display: none;
+}
+
 .header__links-contain {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: space-between;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	max-width: 490px;
 	width: 100%;
 }
@@ -50,6 +81,9 @@
 	line-height: 19px;
 }
 
+/* Конец header */
+/* Начало intro */
+
 .intro {
 	background-image: url("./images/intro__background.svg");
 	background-size: cover;
@@ -57,6 +91,8 @@
 	width: 100%;
 	min-height: 1000px;
 	margin-top: -75px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 }
 
@@ -100,6 +136,9 @@
 	border: none;
 }
 
+/* Конец intro */
+/* Начало where */
+
 .where {
 	width: 100%;
 	min-height: 925px;
@@ -107,6 +146,8 @@
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 }
 
@@ -120,9 +161,22 @@
 	width: 100%;
 	margin: auto 0;
 	min-height: 565px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+}
+
+.where__place-img {
+	-o-object-fit: cover;
+	   object-fit: cover;
+	width: 100%;
 }
 
 .where__title {
@@ -133,9 +187,16 @@
 }
 
 .where__places-track {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
+	-webkit-box-pack: start;
+	    -ms-flex-pack: start;
+	        justify-content: flex-start;
 	width: 100%;
 }
 
@@ -145,9 +206,15 @@
 	min-height: 490px;
 	border-radius: 20px;
 	background-color: #098BAB;
-	box-shadow: 4px 4px 0 0 rgb(0, 0, 0);
+	-webkit-box-shadow: 4px 4px 0 0 rgb(0, 0, 0);
+	        box-shadow: 4px 4px 0 0 rgb(0, 0, 0);
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
 	margin-right: 30px;
 }
 
@@ -175,9 +242,14 @@
 	margin-bottom: 5px;
 }
 
+/* Конец where */
+/* Начало blog */
+
 .blog {
 	width: 100%;
 	min-height: 750px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 }
 
@@ -191,9 +263,16 @@
 	width: 100%;
 	margin: auto 0;
 	min-height: 515px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 }
 
 .blog__title {
@@ -204,16 +283,24 @@
 
 .blog__content {
 	max-height: 420px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
+	-webkit-box-pack: start;
+	    -ms-flex-pack: start;
+	        justify-content: flex-start;
 }
 
 .blog__img {
 	max-width: 490px;
 	width: 100%;
 	border-radius: 20px;
-	box-shadow: 4px 4px 0 0 rgb(0, 0, 0);
+	-webkit-box-shadow: 4px 4px 0 0 rgb(0, 0, 0);
+	        box-shadow: 4px 4px 0 0 rgb(0, 0, 0);
 	margin-right: 30px;
 }
 
@@ -234,6 +321,9 @@
 	margin-bottom: 0;
 } 
 
+/* Конец blog */
+/* Начало menu */
+
 .menu {
 	width: 100%;
 	min-height: 925px;
@@ -241,6 +331,8 @@
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 }
 
@@ -254,12 +346,19 @@
 	width: 100%;
 	margin: auto 0;
 	min-height: 500px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 }
 
-.menu-title {
+.menu__title {
 	font-size: 2.8rem;
 	font-weight: 700;
 	line-height: 53px;
@@ -269,10 +368,17 @@
 .menu__cards-track {
 	width: 100%;
 	max-height: 405px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
-	align-content: flex-start;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	-ms-flex-line-pack: start;
+	    align-content: flex-start;
 }
 
 .menu__card {
@@ -280,11 +386,13 @@
 	width: 100%;
 	min-height: 80px;
 	background-color: #098BAB;
-	box-shadow: 4px 4px 0 0 rgb(0, 0, 0);
+	-webkit-box-shadow: 4px 4px 0 0 rgb(0, 0, 0);
+	        box-shadow: 4px 4px 0 0 rgb(0, 0, 0);
 	margin: 0 30px 40px 0;
 	border-radius: 10px;
 	padding: 15px 35px 15px 10px;
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 }
 
 .menu__card:nth-child(3n) {
@@ -292,9 +400,16 @@
 }
 
 .menu__card-title-contain {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 }
 
 .menu__card-text {
@@ -317,9 +432,14 @@
 	line-height: 23px;
 }
 
+/* Конец menu */
+/* Начало catering */
+
 .catering {
 	width: 100%;
 	min-height: 925px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	background-color: #FAFAFA;
 }
@@ -334,9 +454,16 @@
 	width: 100%;
 	margin: auto 0;
 	max-height: 580px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 }
 
 .catering__title {
@@ -348,9 +475,16 @@
 
 .catering__content {
 	max-height: 420px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
+	-webkit-box-pack: start;
+	    -ms-flex-pack: start;
+	        justify-content: flex-start;
 }
 
 .catering__text-track {
@@ -371,9 +505,17 @@
 	margin-bottom: 0;
 } 
 
+/* Конец catering */
+/* Начало slider */
+
 .slider {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
 	max-width: 620px;
 	margin-right: 30px;
 }
@@ -421,10 +563,16 @@
     float: left;
 }
 
+.slider__nav-btn {
+	display: none;
+}
 
 .slider__arrows {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-self: flex-end;
+	-ms-flex-item-align: end;
+	    align-self: flex-end;
 	margin: 20px 40px 0 0;
 }
 
@@ -469,4 +617,305 @@
 	border-width: 20px 40px 20px 0;
 	border-style: solid;
 	border-color: transparent #1F252B;
+}
+
+/* Конец slider */
+
+@media (max-width: 416px) {
+	.body {
+		max-width: 416px
+	}
+
+	.header {
+		max-width: 416px;
+		min-height: 45px;
+		max-height: 45px;
+	}
+
+	.header__body {
+		max-width: 335px;
+	}
+
+	.header__logo {
+		max-width: 35px;
+	}
+
+	.header__burger {
+		display: block;
+		position: relative;
+		width: 30px;
+		height: 20px;
+	}
+
+	.header__burger span {
+		position: absolute;
+		background-color: #FAFAFA;
+		left: 0;
+		width: 100%;
+		height: 2px;
+		top: 9px;
+		border-radius: 5px;
+	}
+
+	.header__burger:before,
+	.header__burger:after {
+		content: '';
+		background-color: #FAFAFA;
+		position: absolute;
+		width: 100%;
+		height: 2px;
+		left: 0;
+		border-radius: 5px;
+	}
+
+	.header__burger:before {
+		top: 0;
+	}
+
+	.header__burger:after {
+		bottom: 0;
+	}
+
+	.header__links-contain {
+		display: none;
+	}
+
+	.intro {
+		background-image: url("./images/intro__background_mobil.svg");
+		margin-top: 0;
+		max-width: 416px;
+		min-height: 650px;
+	}
+
+	.intro__body {
+		max-width: 335px;
+	}
+
+	.intro__title {
+		font-size: 2.2rem;
+		font-weight: 700;
+		line-height: 41px;
+		max-width: 335px;
+		margin-bottom: 8px;
+	}
+
+	.intro__subtitle {
+		font-size: 1.25rem;
+		font-weight: 500;
+		line-height: 23px;
+		max-width: 335px;
+		margin-bottom: 21px;
+	}
+
+	.intro__button {
+		padding: 15px;
+		font-size: 1.25rem;
+		font-weight: 700;
+		line-height: 23px;
+		border-radius: 10px;
+	}
+
+	.where {
+		background-image: url("./images/where__background_mobil.jpg");
+		min-height: 760px;
+	}
+
+	.where__contain {
+		min-height: 546px;
+		overflow: visible;
+	}
+	.where__title {
+		font-size: 2.2rem;
+		font-weight: 700;
+		line-height: 41px;
+		max-width: 335px;
+    	width: 100%;
+    	margin: auto;
+	}
+
+	.where__places-track {
+		overflow-x: scroll;
+		max-width: 950px;
+		padding: 5px;
+	}
+
+	.where__place {
+		min-width: 300px;
+		margin-right: 20px;
+	}
+
+	.where__place-img {
+		width: 100%;
+		min-height: 355px;
+		border-top-right-radius: 20px;
+		border-top-left-radius: 20px;
+	}
+
+	.where__place-content {
+		max-width: 262px;
+	}
+
+	.blog {
+		width: 100%;
+		min-height: 700px;
+		display: flex;
+	}
+
+	.blog__body {
+		max-width: 335px;
+		margin: auto;
+	}
+
+	.blog__title {
+		font-weight: 700;
+		font-size: 2.2rem;
+		line-height: 41px;
+	}
+
+	.blog__title span {
+		display: none;
+	}
+
+	.blog__contain {
+		max-height: 335px;
+	}
+
+	.blog__content {
+		max-height: 483px;
+		flex-direction: column;
+	}
+
+	.blog__img {
+		max-width: 490px;
+		border-radius: 10px;
+		margin-right: 0;
+		margin-bottom: 15px;
+	}
+
+	.blog__text-track {
+		max-width: 335px;
+		min-height: 0;
+		max-height: 133px;
+		overflow-y: scroll;
+	}
+
+	.blog__text {
+		font-weight: 400;
+		font-size: 1rem;
+		line-height: 19px;
+		margin-bottom: 10px;
+	}
+
+	.menu {
+		min-height: 650px;
+		background-image: url("./images/where__background_mobil.jpg");
+	}
+
+	.menu__body {
+		max-width: 335px;
+	}
+
+	.menu__title {
+		font-size: 2.2rem;
+		font-weight: 700;
+		line-height: 41px;
+	}
+
+	.menu__contain {
+		min-height: 0;
+		height: 460px;
+	}
+
+	.menu__cards-track {
+		height: 455px;
+		overflow-x: scroll;
+	}
+
+	.menu__card {
+		margin-bottom: 20px;
+		max-width: 325px;
+	}
+
+	.catering {
+		min-height: 650px;
+		background-image: url("./images/where__background_mobil.jpg");
+	}
+
+	.catering__body {
+		max-width: 335px;
+		margin: auto;
+	}
+
+	.catering__title {
+		font-weight: 700;
+		font-size: 2.2rem;
+		line-height: 41px;
+	}
+
+	.catering__contain {
+		max-height: 335px;
+	}
+
+	.catering__content {
+		flex-direction: column;
+	}
+
+	.catering__text {
+		font-weight: 400;
+		font-size: 1rem;
+		line-height: 19px;
+		margin-bottom: 10px;
+	}
+
+	.slider__arrows {
+		display: none;
+	}
+
+	.slider__nav-btn {
+		display: block;
+		position: absolute;
+		width: 100%;
+		bottom: 20px;
+		padding: 0;
+		margin: 0;
+		text-align: center;
+	}
+	
+	.slide-nav-btn {
+		position: relative;
+		display: inline-block;
+		list-style: none;
+		width: 5px;
+		height: 5px;
+		background-color: #fff;
+		border-radius: 50%;
+		margin: 3px;
+	}
+	
+	.slide-nav-btn:hover {
+		cursor: pointer;
+	}
+
+	.catering__contain {
+		max-height: 425px;
+		height: 425px;
+	}
+
+	.slider__vieport {
+		border-radius: 10px;
+		box-shadow: 4px 4px 0 0 rgb(0, 0, 0);
+	}
+
+	.catering__text-track {
+		max-width: 335px;
+		min-height: 0;
+		max-height: 133px;
+		overflow-y: scroll;
+	}
+
+	.catering__content {
+		max-height: 365px;
+		height: 365px;
+		justify-content: space-between;
+	}
 }
