--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ html {
 	font-size: 1rem;
 	font-weight: 500;
 	line-height: 19px;
+	
 }
 
 /* Конец header */
@@ -854,6 +855,67 @@ input:-moz-placeholder {
 }
 
 /* Конец contacts */
+/* Наало footer */
+
+.footer {
+	min-height: 355px;
+	width: 100%;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+}
+
+.footer__body {
+	max-width: 1270px;
+	min-height: 222px;
+	width: 100%;
+	margin: auto;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+}
+
+.footer__links-contain {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+}
+
+.footer__title {
+	font-weight: 700;
+	font-size: 1.25rem;
+	line-height: 23px;
+	margin-bottom: 10px;
+}
+
+.footer__link {
+	font-weight: 400;
+	font-size: 1rem;
+	line-height: 19px;
+	color: #FAFAFA;
+	text-decoration: underline;
+	margin-bottom: 15px;
+}
+
+.footer__logo {
+	max-width: 100px;
+	-ms-flex-item-align: self-end;
+	    -ms-grid-row-align: self-end;
+	    align-self: self-end;
+}
+
+/* Конец footer */
 
 @media (max-width: 416px) {
 	.body {
@@ -1265,5 +1327,22 @@ input:-moz-placeholder {
 		font-weight: 700;
 		font-size: 2.2rem;
 		line-height: 41px;
+	}
+
+	.footer {
+		min-height: 375px;
+	}
+	
+	.footer__body {
+		max-width: 335px;
+		min-height: 277px;
+		flex-direction: column;
+	}
+	
+	.footer__logo {
+		max-width: 35px;
+		-ms-flex-item-align: self-start;
+			-ms-grid-row-align: self-start;
+			align-self: self-start;
 	}
 }
