--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ html {
 	overflow-x: hidden;
 }
 
+.lock {
+	overflow-y: hidden;
+}
+
 /* Начало header */
 
 .header {
@@ -79,7 +83,7 @@ html {
 	font-size: 1rem;
 	font-weight: 500;
 	line-height: 19px;
-	
+	transition: all .1s linear;
 }
 
 /* Конец header */
@@ -143,6 +147,9 @@ html {
 	max-width: 360px;
 	width: 100%;
 	border: none;
+	-webkit-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
 }
 
 /* Конец intro */
@@ -391,15 +398,10 @@ html {
 }
 
 .menu__card {
-	max-width: 360px;
+	max-width: 730px;
 	width: 100%;
 	min-height: 80px;
-	background-color: #098BAB;
-	-webkit-box-shadow: 4px 4px 0 0 rgb(0, 0, 0);
-	        box-shadow: 4px 4px 0 0 rgb(0, 0, 0);
 	margin: 0 30px 40px 0;
-	border-radius: 10px;
-	padding: 15px 35px 15px 10px;
 	-webkit-box-sizing: border-box;
 	        box-sizing: border-box;
 }
@@ -427,18 +429,21 @@ html {
 	line-height: 19px;
 	max-width: 315px;
 	margin-top: 5px;
+	color:#1F252B;
 }
 
 .menu__card-title {
 	font-weight: 500;
 	font-size: 1.25rem;
 	line-height: 23px;
+	color: #EF7730;
 }
 
 .menu__card-price {
 	font-weight: 500;
 	font-size: 1.25rem;
 	line-height: 23px;
+	color: #EF7730;
 }
 
 /* Конец menu */
@@ -551,6 +556,9 @@ html {
 
 .slider__vieport {
 	width: 100%;
+	border-radius: 20px;
+	-webkit-box-shadow: 4px 4px 0 0 rgb(0, 0, 0);
+			box-shadow: 4px 4px 0 0 rgb(0, 0, 0);
     display: table;
     position: relative;
     overflow: hidden;
@@ -583,50 +591,60 @@ html {
 	display: flex;
 	-ms-flex-item-align: end;
 	    align-self: flex-end;
-	margin: 20px 40px 0 0;
+	margin: 20px 0 0 0;
 }
 
 .d15 {
-	width: 60px; 
-	height: 20px; 
+	width: 70px; 
+	height: 4px; 
 	margin: 10px 0;
 	background: #1F252B;
 	position: relative;
 	cursor: pointer;
+	border-radius: 4px;
 }
 
 .d15:after {
 	content: "";
-	width: 0; 
-	height: 0;
+	width: 20px; 
+	height: 20px;
 	position: absolute; 
+	border-left: 4px solid #1F252B;
+  	border-bottom: 4px solid #1F252B;
+	-webkit-transform: rotate(-135deg);
+	    -ms-transform: rotate(-135deg);
+	        transform: rotate(-135deg);
 	top: -10px; 
-	left: 100%;
-	border-width: 20px 0 20px 40px;
-	border-style: solid;
-	border-color: transparent #1F252B;
+	left: 60%;
+	border-radius: 4px;
+	
 }
 
 .d16 {
-	width: 60px; 
-	height: 20px; 
+	width: 70px; 
+	height: 4px; 
 	margin: 10px 0;
 	background: #1F252B;
 	position: relative;
 	margin-right: 90px;
 	cursor: pointer;
+	border-radius: 4px;
 }
 
 .d16::before {
 	content: "";
-	width: 0; 
-	height: 0;
+	width: 20px; 
+	height: 20px;
 	position: absolute; 
+	border-left: 4px solid #1F252B;
+  	border-bottom: 4px solid #1F252B;
+	border-radius: 4px;
+	-webkit-transform: rotate(45deg);
+	    -ms-transform: rotate(45deg);
+	        transform: rotate(45deg);
 	top: -10px; 
-	right: 100%;
-	border-width: 20px 40px 20px 0;
-	border-style: solid;
-	border-color: transparent #1F252B;
+	right: 60%;
+	transition: all .3s ease-in-out;
 }
 
 /* Конец slider */
@@ -760,6 +778,9 @@ html {
 	-ms-flex-item-align: end;
 	    align-self: flex-end;
 	margin-top: 30px;
+	-webkit-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
 }
 
 input::-webkit-input-placeholder {
@@ -906,6 +927,7 @@ input:-moz-placeholder {
 	color: #FAFAFA;
 	text-decoration: underline;
 	margin-bottom: 15px;
+	transition: all .1s linear;
 }
 
 .footer__logo {
@@ -916,6 +938,44 @@ input:-moz-placeholder {
 }
 
 /* Конец footer */
+/* Начало анимаций для кнопок */
+
+@media (min-width:416px) {
+	.intro__button:hover,
+	.form__button:hover {
+		-webkit-box-shadow: 6px 6px 0 0 rgba(0, 0, 0, 0.5);
+				box-shadow: 6px 6px 0 0 rgba(0, 0, 0, 0.5);
+		-webkit-transform: scale(1.01);
+			-ms-transform: scale(1.01);
+				transform: scale(1.01);
+	}
+}
+
+.intro__button:active,
+.form__button:active {
+	-webkit-box-shadow: none;
+	        box-shadow: none;
+	-webkit-transform: scale(1);
+	    -ms-transform: scale(1);
+	        transform: scale(1);
+}
+
+/* Конец анимаций для кнопок */
+
+/* Начало анимаций для ссылок */
+
+.header__link:hover,
+.footer__link:hover {
+	color: #EF7730;
+	text-decoration: none;
+}
+
+.header__link:active,
+.footer__link:active {
+	text-decoration: underline;
+}
+
+/* Конец анимаций для ссылок */
 
 @media (max-width: 416px) {
 	.body {
@@ -941,6 +1001,7 @@ input:-moz-placeholder {
 		position: relative;
 		width: 30px;
 		height: 20px;
+		transition: all .3s ease-in-out; 
 	}
 
 	.header__burger span {
@@ -951,6 +1012,7 @@ input:-moz-placeholder {
 		height: 2px;
 		top: 9px;
 		border-radius: 5px;
+		transition: all .3s ease-in-out; 
 	}
 
 	.header__burger:before,
@@ -962,10 +1024,26 @@ input:-moz-placeholder {
 		height: 2px;
 		left: 0;
 		border-radius: 5px;
+		transition: all .3s ease-in-out; 
 	}
 
 	.header__burger:before {
 		top: 0;
+	}
+
+	.header__burger.active:before{
+		transform: rotate(45deg);
+		top: 9px;
+		
+	}
+
+	.header__burger.active:after {
+		transform: rotate(-45deg);
+		bottom: 9px;
+	}
+
+	.header__burger.active span {
+		transform: scale(0);
 	}
 
 	.header__burger:after {
@@ -1124,12 +1202,21 @@ input:-moz-placeholder {
 
 	.menu__cards-track {
 		height: 455px;
-		overflow-x: scroll;
 	}
 
 	.menu__card {
 		margin-bottom: 20px;
 		max-width: 325px;
+		background-color: #098BAB;
+		-webkit-box-shadow: 4px 4px 0 0 rgb(0, 0, 0);
+	        	box-shadow: 4px 4px 0 0 rgb(0, 0, 0);
+		border-radius: 10px;
+		padding: 15px 35px 15px 10px;
+	}
+	.menu__card-text,
+	.menu__card-title,
+	.menu__card-price{
+		color: #FAFAFA;
 	}
 
 	.catering {
@@ -1163,6 +1250,10 @@ input:-moz-placeholder {
 		margin-bottom: 10px;
 	}
 
+	.slider {
+		margin-right: 0;
+	}
+
 	.slider__arrows {
 		display: none;
 	}
@@ -1181,8 +1272,8 @@ input:-moz-placeholder {
 		position: relative;
 		display: inline-block;
 		list-style: none;
-		width: 5px;
-		height: 5px;
+		width: 7px;
+		height: 7px;
 		background-color: #fff;
 		border-radius: 50%;
 		margin: 3px;
@@ -1220,6 +1311,35 @@ input:-moz-placeholder {
 		z-index: 9;
 		background-color: #098BAB;
 		color: #FAFAFA;
+		width: 100%;
+		height: 100%;
+		display: flex;
+		left: -100%;
+		transition: all .2s ease-in-out;
+	}
+
+	.menu-mobile__body {
+		max-width: 335px;
+		width: 100%;
+		margin: auto;
+	}
+
+	.menu-mobile__content {
+		min-height: 310px;
+	}
+
+	.menu-mobile__title {
+		font-weight: 700;
+		font-size: 2.2rem;
+		line-height: 41px;
+		margin-bottom: 10px;
+	}
+
+	.menu-mobile__link {
+		font-weight: 700;
+		font-size: 1.25rem;
+		line-height: 23px;
+		margin-bottom: 15px;
 	}
 
 	.active {
@@ -1332,6 +1452,7 @@ input:-moz-placeholder {
 	.footer {
 		min-height: 375px;
 	}
+
 	
 	.footer__body {
 		max-width: 335px;
